Animation menu starter dishs, dishs, dessert.

--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -62,7 +62,7 @@
                             </p>
                         </li>
 
-                        <li class="container__menu__ul__li margin-bottom-layout-menu">
+                        <li class="container__menu__ul__li container__menu__ul__delay-one margin-bottom-layout-menu">
                             <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Velouté de légumes d'antan
                             </h4>
@@ -74,7 +74,7 @@
                             </p>
                         </li>
 
-                        <li class="container__menu__ul__li">
+                        <li class="container__menu__ul__li container__menu__ul__delay-two">
                             <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Soupe à l'oignon
                             </h4>
@@ -104,7 +104,7 @@
                             </p>
                         </li>
 
-                        <li class="container__menu__ul__li margin-bottom-layout-menu">
+                        <li class="container__menu__ul__li container__menu__ul__delay-one margin-bottom-layout-menu">
                             <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Magret de canard
                             </h4>
@@ -116,7 +116,7 @@
                             </p>
                         </li>
 
-                        <li class="container__menu__ul__li">
+                        <li class="container__menu__ul__li container__menu__ul__delay-two">
                             <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Pigeonneau d'Ille-et-Vilaine
                             </h4>
@@ -146,7 +146,7 @@
                             </p>
                         </li>
 
-                        <li class="container__menu__ul__li margin-bottom-layout-menu">
+                        <li class="container__menu__ul__li container__menu__ul__delay-one margin-bottom-layout-menu">
                             <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Fondant au chocolat
                             </h4>
@@ -158,7 +158,7 @@
                             </p>
                         </li>
 
-                        <li class="container__menu__ul__li">
+                        <li class="container__menu__ul__li container__menu__ul__delay-two">
                             <h4 class="container__menu__ul__li__name font-weight-bold">
                                 Millefeuille croustillant
                             </h4>
