Animation heart on index.html page.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,11 @@
                             <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">La palette du goût</h3>
                             <p>Ménilmontant</p>
                         </div>
-                        <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
+                        <div class="comp-restaurants-card__description__icon">
+                            <!-- Class container... use in _layout.scss -->
+                            <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                            <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                        </div>
                     </div>
                 </article>
 
@@ -128,7 +132,11 @@
                             <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">La note enchantée</h3>
                             <p>Charonne</p>
                         </div>
-                        <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
+                        <div class="comp-restaurants-card__description__icon">
+                            <!-- Class container... use in _layout.scss -->
+                            <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                            <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                        </div>
                     </div>
                 </article>
                 
@@ -146,7 +154,11 @@
                             <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">À la française</h3>
                             <p>Charonne</p>
                         </div>
-                        <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
+                        <div class="comp-restaurants-card__description__icon">
+                            <!-- Class container... use in _layout.scss -->
+                            <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                            <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                        </div>
                     </div>
                 </article>
 
@@ -164,7 +176,11 @@
                             <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">Le délice des sens</h3>
                             <p>Folie-Méricourt</p>
                         </div>
-                        <i class="fa-regular fa-heart comp-restaurants-card__description__icon text-align-center"></i>
+                        <div class="comp-restaurants-card__description__icon">
+                            <!-- Class container... use in _layout.scss -->
+                            <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                            <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                        </div>
                     </div>
                 </article>
             </div>
