Animation loading spiner on index.html.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
     <!-- HOME PAGE -->
     <body>
+        <!-- Layout spiner loading -->
+        <div class="spiner-loding text-align-center">
+            <i class="fa-solid fa-arrows-spin spiner-loding__icon"></i>
+        </div>
+
         <!-- Layout header -->
         <header>
             <i class="fa-solid fa-arrow-left header-icon display-none"></i>
