Modified contact (footer) add a mailto.

--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@
                         Devenir partenaire
                     </li>
                     <li class="footer-container__li margin-bottom-footer">Mentions légales</li>
-                    <li class="footer-container__li margin-bottom-footer">Contact</li>
+                    <li class="footer-container__li margin-bottom-footer">
+                        <a href="mailto:contact@contact.com">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </footer>
