Modify balise a css.

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                     </li>
                     <li class="footer-container__li margin-bottom-footer">Mentions légales</li>
                     <li class="footer-container__li margin-bottom-footer">
-                        <a href="mailto:contact@contact.com">Contact</a>
+                        <a href="mailto:contact@contact.com" class="footer-container__li__a">Contact</a>
                     </li>
                 </ul>
             </nav>
