--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -270,7 +270,9 @@
                             Devenir partenaire
                         </li>
                         <li class="footer-container__li margin-bottom-footer">Mentions légales</li>
-                        <li class="footer-container__li margin-bottom-footer">Contact</li>
+                        <li class="footer-container__li margin-bottom-footer">
+                            <a href="mailto:contact@contact.com" class="footer-container__li__a">Contact</a>
+                        </li>
                     </ul>
                 </nav>
             </footer>
