--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <div class="comp-restaurants-card__description">
                             <div class="comp-restaurants-card__description__container">
                                 <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">À la française</h3>
-                                <p>Charonne</p>
+                                <p>Cité Rouge</p>
                             </div>
                             <div class="comp-restaurants-card__description__icon">
                                 <!-- Class container... use in _layout.scss -->
