Modification padding index.html.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </section>
 
             <!-- Restaurants -->
-            <section class="restaurant padding-top padding-bottom padding-left padding-right">
+            <section class="restaurant padding-left padding-right">
                 <h2 class="margin-bottom-title font-weight-bold">Restaurants</h2>
 
                 <div class="container-restaurants-card">
