Add link on header (icon return), menu-a-la-francaise.html.

--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -24,7 +24,9 @@
     <body>
         <!-- Layout header -->
         <header>
-            <i class="fa-solid fa-arrow-left header-icon"></i>
+            <a href="index.html">
+                <i class="fa-solid fa-arrow-left header-icon"></i>
+            </a>
             <h1 class="header-h1 font-family-shrikhand text-align-center">ohmyfood</h1>
         </header>
 
