Add css in functioning _page (index.html).

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <!-- Functioning -->
             <section class="functioning padding-top padding-bottom padding-left padding-right">
-                <h2 class="margin-bottom-title font-weight-bold">Fonctionnement</h2>
+                <h2 class="functioning__title margin-bottom-title font-weight-bold">Fonctionnement</h2>
 
                 <div class="container-order">
                     <!-- Component order -->
