Add css on restaurants _page (index.html).

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <!-- Restaurants -->
             <section class="restaurant padding-left padding-right">
-                <h2 class="margin-bottom-title font-weight-bold">Restaurants</h2>
+                <h2 class="restaurant__title margin-bottom-title font-weight-bold">Restaurants</h2>
 
                 <div class="container-restaurants-card">
                     <!-- Component restaurants-cards -->
