--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -248,9 +248,11 @@
                     <!-- Div for center the component -->
                     <div class="comp-container-page">
                         <!-- Component call to action button -->
-                        <button class="comp-call-to-action-btn call-to-action-btn-modif-page">
-                            Commander
-                        </button>
+                        <a href="#" class="call-to-action__a">
+                            <button class="comp-call-to-action-btn call-to-action-btn-modif-page cursor-pointer">
+                                Commander
+                            </button>
+                        </a>
                     </div>
                 </section>
             </div>
