Add cursor pointer fact on 'Fonctionnement', index.html.

--- a/index.html
+++ b/index.html
@@ -63,11 +63,13 @@
 
             <!-- Functioning -->
             <section class="functioning padding-top padding-bottom padding-left padding-right">
-                <h2 class="functioning__title margin-bottom-title font-weight-bold">Fonctionnement</h2>
+                <h2 class="functioning__title margin-bottom-title font-weight-bold">
+                    Fonctionnement
+                </h2>
 
                 <div class="container-order">
                     <!-- Component order -->
-                    <div class="comp-order">
+                    <div class="comp-order cursor-pointer">
                         <div class="comp-order__number text-align-center">
                             1
                         </div>
@@ -78,7 +80,7 @@
                     </div>
 
                     <!-- Component order -->
-                    <div class="comp-order margin-top-comp-order">
+                    <div class="comp-order margin-top-comp-order cursor-pointer">
                         <div class="comp-order__number text-align-center">
                             2
                         </div>
@@ -89,7 +91,7 @@
                     </div>
 
                     <!-- Component order -->
-                    <div class="comp-order margin-top-comp-order">
+                    <div class="comp-order margin-top-comp-order cursor-pointer">
                         <div class="comp-order__number text-align-center">
                             3
                         </div>
