Add hover on balise <a> footer, index.html.

--- a/index.html
+++ b/index.html
@@ -207,18 +207,30 @@
         <footer>
             <nav>
                 <ul class="footer-container">
-                    <li class="footer-container__title font-family-shrikhand">Ohmyfood</li>
-                    <li class="footer-container__li margin-bottom-footer">
-                        <i class="fa-solid fa-utensils footer-container__li__icon"></i>
-                        Proposez un restaurant
+                    <li class="footer-container__title font-family-shrikhand">
+                        Ohmyfood
                     </li>
                     <li class="footer-container__li margin-bottom-footer">
-                        <i class="fa-solid fa-handshake-angle footer-container__li__icon"></i>
-                        Devenir partenaire
+                        <a href="#" class="footer-container__li__a color-quatertiary">   
+                            <i class="fa-solid fa-utensils footer-container__li__icon"></i>
+                            Proposez un restaurant
+                        </a>
                     </li>
-                    <li class="footer-container__li margin-bottom-footer">Mentions légales</li>
                     <li class="footer-container__li margin-bottom-footer">
-                        <a href="mailto:contact@contact.com" class="footer-container__li__a">Contact</a>
+                        <a href="#" class="footer-container__li__a color-quatertiary">
+                            <i class="fa-solid fa-handshake-angle footer-container__li__icon"></i>
+                            Devenir partenaire
+                        </a>
+                    </li>
+                    <li class="footer-container__li margin-bottom-footer">
+                        <a href="#" class="footer-container__li__a color-quatertiary">
+                            Mentions légales
+                        </a>
+                    </li>
+                    <li class="footer-container__li margin-bottom-footer">
+                        <a href="mailto:contact@contact.com" class="footer-container__li__a color-quatertiary">
+                            Contact
+                        </a>
                     </li>
                 </ul>
             </nav>
