modification button call-to-action.

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 </p>
 
                 <!-- Component call to action button -->
-                <a href="#restaurants" class="call-to-action__a">
-                    <button class="comp-call-to-action-btn cursor-pointer">
+                <button class="comp-call-to-action-btn cursor-pointer">
+                    <a href="#restaurants" class="comp-call-to-action-btn__a">
                         Explorer nos restaurants
-                    </button>
-                </a>
+                    </a>
+                </button>
             </section>
 
             <!-- Functioning -->
