Modification button call-to-action (button remplaced by <a>).

--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
                 </p>
 
                 <!-- Component call to action button -->
-                <button class="comp-call-to-action-btn cursor-pointer">
-                    <a href="#restaurants" class="comp-call-to-action-btn__a">
-                        Explorer nos restaurants
-                    </a>
-                </button>
+                <a href="#restaurants" class="comp-call-to-action-btn">
+                    Explorer nos restaurants
+                </a>
             </section>
 
             <!-- Functioning -->
