--- a/index.html
+++ b/index.html
@@ -202,31 +202,31 @@
         </main>
 
         <!-- Layout footer -->
-        <footer>
+        <footer class="footer">
             <nav>
-                <ul class="footer-container">
-                    <li class="footer-container__title font-family-shrikhand">
+                <ul class="footer__container">
+                    <li class="footer__container__title font-family-shrikhand">
                         Ohmyfood
                     </li>
-                    <li class="footer-container__li margin-bottom-footer">
-                        <a href="#" class="footer-container__li__a color-quatertiary">   
-                            <i class="fa-solid fa-utensils footer-container__li__icon"></i>
+                    <li class="footer__container__li margin-bottom-footer">
+                        <a href="#" class="footer__container__li__a color-quatertiary">   
+                            <i class="fa-solid fa-utensils footer__container__li__icon"></i>
                             Proposez un restaurant
                         </a>
                     </li>
-                    <li class="footer-container__li margin-bottom-footer">
-                        <a href="#" class="footer-container__li__a color-quatertiary">
-                            <i class="fa-solid fa-handshake-angle footer-container__li__icon"></i>
+                    <li class="footer__container__li margin-bottom-footer">
+                        <a href="#" class="footer__container__li__a color-quatertiary">
+                            <i class="fa-solid fa-handshake-angle footer__container__li__icon"></i>
                             Devenir partenaire
                         </a>
                     </li>
-                    <li class="footer-container__li margin-bottom-footer">
-                        <a href="#" class="footer-container__li__a color-quatertiary">
+                    <li class="footer__container__li margin-bottom-footer">
+                        <a href="#" class="footer__container__li__a color-quatertiary">
                             Mentions légales
                         </a>
                     </li>
-                    <li class="footer-container__li margin-bottom-footer">
-                        <a href="mailto:contact@contact.com" class="footer-container__li__a color-quatertiary">
+                    <li class="footer__container__li margin-bottom-footer">
+                        <a href="mailto:contact@contact.com" class="footer__container__li__a color-quatertiary">
                             Contact
                         </a>
                     </li>
