Modification header, menu-a-la-francaise.html.

--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -24,10 +24,12 @@
     <body>
         <!-- Layout header -->
         <header>
+            <i class="fa-solid fa-arrow-left header-icon cursor-pointer"></i>
             <a href="index.html">
-                <i class="fa-solid fa-arrow-left header-icon"></i>
+                <h1 class="header-h1 font-family-shrikhand text-align-center">
+                    ohmyfood
+                </h1>
             </a>
-            <h1 class="header-h1 font-family-shrikhand text-align-center">ohmyfood</h1>
         </header>
 
         <main>
