--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <!-- Layout header -->
         <header>
-            <i class="fa-solid fa-arrow-left header-icon display-none"></i>
+            <i class="fa-solid fa-arrow-left header-icon display-none cursor-pointer"></i>
             <a href="index.html">
                 <h1 class="header-h1 font-family-shrikhand text-align-center">ohmyfood</h1>
             </a>
