--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -24,12 +24,13 @@
     <body>
         <!-- Layout header -->
         <header>
-            <i class="fa-solid fa-arrow-left header-icon cursor-pointer"></i>
             <a href="index.html">
-                <h1 class="header-h1 font-family-shrikhand text-align-center">
-                    ohmyfood
-                </h1>
+                <i class="fa-solid fa-arrow-left header-icon cursor-pointer"></i>
             </a>
+            
+            <h1 class="header-h1 font-family-shrikhand text-align-center">
+                <a href="index.html">ohmyfood</a>
+            </h1>
         </header>
 
         <main>
