Modification header in index.hmlt.

--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
 
         <!-- Layout header -->
         <header>
-            <i class="fa-solid fa-arrow-left header-icon display-none cursor-pointer"></i>
             <a href="index.html">
-                <h1 class="header-h1 font-family-shrikhand text-align-center">ohmyfood</h1>
+                <i class="fa-solid fa-arrow-left header-icon cursor-pointer display-none"></i>
             </a>
+            
+            <h1 class="header-h1 font-family-shrikhand text-align-center">
+                <a href="index.html">ohmyfood</a>
+            </h1>
         </header>
         
         <main>
