--- a/menu-a-la-francaise.html
+++ b/menu-a-la-francaise.html
@@ -43,7 +43,7 @@
             <section class="container__menu">
                 <div class="container__menu__title font-family-shrikhand font-weight-bold">
                     <h2 class="container__menu__title__h2">À la française</h2>
-                    <div class="container__menu__title__favories">
+                    <div class="container__menu__title__favories cursor-pointer">
                         <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
                         <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
                     </div>
@@ -54,7 +54,7 @@
                 <div class="container__menu__design-element"></div>
 
                 <ul class="container__menu__ul">
-                    <li class="container__menu__ul__li margin-bottom-layout-menu">
+                    <li class="container__menu__ul__li margin-bottom-layout-menu cursor-pointer">
                         <div class="container__menu__ul__li__name">
                             <h4 class="container__menu__ul__li__name__primary font-weight-bold">
                                 Tartare de poulpe acidulé
@@ -74,7 +74,7 @@
                         </div>
                     </li>
 
-                    <li class="container__menu__ul__li container__menu__ul__delay-one margin-bottom-layout-menu">
+                    <li class="container__menu__ul__li container__menu__ul__delay-one margin-bottom-layout-menu cursor-pointer">
                         <div class="container__menu__ul__li__name">
                             <h4 class="container__menu__ul__li__name__primary font-weight-bold">
                                 Velouté de légumes d'antan
@@ -94,7 +94,7 @@
                         </div>
                     </li>
 
-                    <li class="container__menu__ul__li container__menu__ul__delay-two">
+                    <li class="container__menu__ul__li container__menu__ul__delay-two cursor-pointer">
                         <div class="container__menu__ul__li__name">
                             <h4 class="container__menu__ul__li__name__primary font-weight-bold">
                                 Soupe à l'oignon
@@ -120,7 +120,7 @@
                 <div class="container__menu__design-element"></div>
 
                 <ul class="container__menu__ul">
-                    <li class="container__menu__ul__li margin-bottom-layout-menu">
+                    <li class="container__menu__ul__li margin-bottom-layout-menu cursor-pointer">
                         <div class="container__menu__ul__li__name">
                             <h4 class="container__menu__ul__li__name__primary font-weight-bold">
                                 Coquilles Saint-Jacques
@@ -140,7 +140,7 @@
                         </div>
                     </li>
 
-                    <li class="container__menu__ul__li container__menu__ul__delay-one margin-bottom-layout-menu">
+                    <li class="container__menu__ul__li container__menu__ul__delay-one margin-bottom-layout-menu cursor-pointer">
                         <div class="container__menu__ul__li__name">
                             <h4 class="container__menu__ul__li__name__primary font-weight-bold">
                                 Magret de canard
@@ -160,7 +160,7 @@
                         </div>
                     </li>
 
-                    <li class="container__menu__ul__li container__menu__ul__delay-two">
+                    <li class="container__menu__ul__li container__menu__ul__delay-two cursor-pointer">
                         <div class="container__menu__ul__li__name">
                             <h4 class="container__menu__ul__li__name__primary font-weight-bold">
                                 Pigeonneau d'Ille-et-Vilaine
@@ -186,7 +186,7 @@
                 <div class="container__menu__design-element"></div>
 
                 <ul class="container__menu__ul">
-                    <li class="container__menu__ul__li margin-bottom-layout-menu">
+                    <li class="container__menu__ul__li margin-bottom-layout-menu cursor-pointer">
                         <div class="container__menu__ul__li__name">
                             <h4 class="container__menu__ul__li__name__primary font-weight-bold">
                                 Pétales de violettes glacés
@@ -206,7 +206,7 @@
                         </div>
                     </li>
 
-                    <li class="container__menu__ul__li container__menu__ul__delay-one margin-bottom-layout-menu">
+                    <li class="container__menu__ul__li container__menu__ul__delay-one margin-bottom-layout-menu cursor-pointer">
                         <div class="container__menu__ul__li__name">
                             <h4 class="container__menu__ul__li__name__primary font-weight-bold">
                                 Fondant au chocolat
@@ -226,7 +226,7 @@
                         </div>
                     </li>
 
-                    <li class="container__menu__ul__li container__menu__ul__delay-two">
+                    <li class="container__menu__ul__li container__menu__ul__delay-two cursor-pointer">
                         <div class="container__menu__ul__li__name">
                             <h4 class="container__menu__ul__li__name__primary font-weight-bold">
                                 Millefeuille croustillant
