Add link (<a>) on comp-restaurants-card, index.html.

--- a/index.html
+++ b/index.html
@@ -113,46 +113,50 @@
                 <div class="container-restaurants-card">
                     <!-- Component restaurants-cards -->
                     <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
-                        <figure class="comp-restaurants-card__image-container">
-                            <img src="./assets/images/la-palette-du-gout.jpg" alt="Plat du restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
-                            <div class="comp-restaurants-card__image-container__tags font-weight-bold">
-                                Nouveau
-                            </div>
-                        </figure>
+                        <a href="la-palette-du-gout.html">
+                            <figure class="comp-restaurants-card__image-container">
+                                <img src="./assets/images/la-palette-du-gout.jpg" alt="Plat du restaurant la palette du goût" class="comp-restaurants-card__image-container__image">
+                                <div class="comp-restaurants-card__image-container__tags font-weight-bold">
+                                    Nouveau
+                                </div>
+                            </figure>
 
-                        <div class="comp-restaurants-card__description">
-                            <div class="comp-restaurants-card__description__container">
-                                <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">La palette du goût</h3>
-                                <p>Ménilmontant</p>
+                            <div class="comp-restaurants-card__description">
+                                <div class="comp-restaurants-card__description__container">
+                                    <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">La palette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                </div>
+                                <div class="comp-restaurants-card__description__icon">
+                                    <!-- Class container... use in _layout.scss -->
+                                    <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                                    <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                                </div>
                             </div>
-                            <div class="comp-restaurants-card__description__icon">
-                                <!-- Class container... use in _layout.scss -->
-                                <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
-                                <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
-                            </div>
-                        </div>
+                        </a>
                     </article>
 
                     <!-- Component restaurants-cards -->
                     <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
-                        <figure class="comp-restaurants-card__image-container">
-                            <img src="./assets/images/la-note-enchantee.jpg" alt="Plat du restaurant la note enchantée" class="comp-restaurants-card__image-container__image">
-                            <div class="comp-restaurants-card__image-container__tags font-weight-bold">
-                                Nouveau
-                            </div>
-                        </figure>
+                        <a href="la-note-enchantee.html">
+                            <figure class="comp-restaurants-card__image-container">
+                                <img src="./assets/images/la-note-enchantee.jpg" alt="Plat du restaurant la note enchantée" class="comp-restaurants-card__image-container__image">
+                                <div class="comp-restaurants-card__image-container__tags font-weight-bold">
+                                    Nouveau
+                                </div>
+                            </figure>
 
-                        <div class="comp-restaurants-card__description">
-                            <div class="comp-restaurants-card__description__container">
-                                <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">La note enchantée</h3>
-                                <p>Charonne</p>
+                            <div class="comp-restaurants-card__description">
+                                <div class="comp-restaurants-card__description__container">
+                                    <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">La note enchantée</h3>
+                                    <p>Charonne</p>
+                                </div>
+                                <div class="comp-restaurants-card__description__icon">
+                                    <!-- Class container... use in _layout.scss -->
+                                    <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                                    <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                                </div>
                             </div>
-                            <div class="comp-restaurants-card__description__icon">
-                                <!-- Class container... use in _layout.scss -->
-                                <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
-                                <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
-                            </div>
-                        </div>
+                        </a>
                     </article>
                     
                     <!-- Component restaurants-cards -->
@@ -181,24 +185,26 @@
 
                     <!-- Component restaurants-cards -->
                     <article class="comp-restaurants-card margin-bottom-comp-restaurants-cards">
-                        <figure class="comp-restaurants-card__image-container">
-                            <img src="./assets/images/le-delice-des-sens.jpg" alt="Plat du restaurant le délice des sens" class="comp-restaurants-card__image-container__image">
-                            <div class="comp-restaurants-card__image-container__tags font-weight-bold display-none">
-                                Nouveau
-                            </div>
-                        </figure>
+                        <a href="le-delice-des-sens.html">
+                            <figure class="comp-restaurants-card__image-container">
+                                <img src="./assets/images/le-delice-des-sens.jpg" alt="Plat du restaurant le délice des sens" class="comp-restaurants-card__image-container__image">
+                                <div class="comp-restaurants-card__image-container__tags font-weight-bold display-none">
+                                    Nouveau
+                                </div>
+                            </figure>
 
-                        <div class="comp-restaurants-card__description">
-                            <div class="comp-restaurants-card__description__container">
-                                <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">Le délice des sens</h3>
-                                <p>Folie-Méricourt</p>
+                            <div class="comp-restaurants-card__description">
+                                <div class="comp-restaurants-card__description__container">
+                                    <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">Le délice des sens</h3>
+                                    <p>Folie-Méricourt</p>
+                                </div>
+                                <div class="comp-restaurants-card__description__icon">
+                                    <!-- Class container... use in _layout.scss -->
+                                    <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                                    <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                                </div>
                             </div>
-                            <div class="comp-restaurants-card__description__icon">
-                                <!-- Class container... use in _layout.scss -->
-                                <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
-                                <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
-                            </div>
-                        </div>
+                        </a>
                     </article>
                 </div>
             </section>
