Modify balise <a> emplacement in comp-restaurants-card.

--- a/index.html
+++ b/index.html
@@ -126,13 +126,14 @@
                                     <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">La palette du goût</h3>
                                     <p>Ménilmontant</p>
                                 </div>
-                                <div class="comp-restaurants-card__description__icon">
-                                    <!-- Class container... use in _layout.scss -->
-                                    <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
-                                    <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
-                                </div>
                             </div>
                         </a>
+
+                        <div class="comp-restaurants-card__icon cursor-pointer">
+                            <!-- Class container... use in _layout.scss -->
+                            <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                            <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                        </div>
                     </article>
 
                     <!-- Component restaurants-cards -->
@@ -150,13 +151,14 @@
                                     <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">La note enchantée</h3>
                                     <p>Charonne</p>
                                 </div>
-                                <div class="comp-restaurants-card__description__icon">
-                                    <!-- Class container... use in _layout.scss -->
-                                    <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
-                                    <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
-                                </div>
                             </div>
                         </a>
+
+                        <div class="comp-restaurants-card__icon cursor-pointer">
+                            <!-- Class container... use in _layout.scss -->
+                            <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                            <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                        </div>
                     </article>
                     
                     <!-- Component restaurants-cards -->
@@ -174,13 +176,14 @@
                                     <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">À la française</h3>
                                     <p>Cité Rouge</p>
                                 </div>
-                                <div class="comp-restaurants-card__description__icon">
-                                    <!-- Class container... use in _layout.scss -->
-                                    <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
-                                    <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
-                                </div>
                             </div>
                         </a>
+
+                        <div class="comp-restaurants-card__icon cursor-pointer">
+                            <!-- Class container... use in _layout.scss -->
+                            <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                            <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                        </div>
                     </article>
 
                     <!-- Component restaurants-cards -->
@@ -198,13 +201,14 @@
                                     <h3 class="comp-restaurants-card__description__container__h3 font-weight-bold">Le délice des sens</h3>
                                     <p>Folie-Méricourt</p>
                                 </div>
-                                <div class="comp-restaurants-card__description__icon">
-                                    <!-- Class container... use in _layout.scss -->
-                                    <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
-                                    <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
-                                </div>
                             </div>
                         </a>
+
+                        <div class="comp-restaurants-card__icon cursor-pointer">
+                            <!-- Class container... use in _layout.scss -->
+                            <i class="fa-regular fa-heart container__menu__title__favories__icon-primary"></i>
+                            <i class="fa-solid fa-heart container__menu__title__favories__icon-secondary"></i>
+                        </div>
                     </article>
                 </div>
             </section>
